correct-clt-and-frs
