# react/src/import_api/swagger.json
@@ -71,6 +71,155 @@
     }
   ],
   "paths": {
+    "/api/gestionDeStock/fournisseurs/{id}": {
+      "put": {
+        "tags": [
+          "Fournisseur"
+        ],
+        "summary": "mettre à jour un fournisseur",
+        "description": "Cette méthode permet de mettre à jour un fournisseur par son ID",
+        "operationId": "update",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/FournisseurDto"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "fournisseur mis à jour",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/FournisseurDto"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Aucun fournisseur trouvé avec l'ID fourni",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/FournisseurDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/gestionDeStock/clients/{id}": {
+      "put": {
+        "tags": [
+          "Clients"
+        ],
+        "summary": "mettre à jour un client",
+        "description": "Cette méthode permet de mettre à jour un client par son ID",
+        "operationId": "update_1",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ClientDto"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Client mis à jour",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ClientDto"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Aucun client trouvé avec l'ID fourni",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ClientDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/gestionDeStock/articles/{id}": {
+      "put": {
+        "tags": [
+          "Gestion des Articles"
+        ],
+        "summary": "mise à jour d'un article",
+        "description": "Cette methode permet de mettre à jour un article par ID",
+        "operationId": "updateArticle",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ArticleDto"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "L'article a ete mise à jour",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ArticleDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/gestionDeStock/ventes/create": {
       "post": {
         "tags": [
@@ -801,7 +950,7 @@
           "api/gestionDeStock/commandefournisseur"
         ],
         "summary": "Changer l'article d'une ligne de commande",
-        "operationId": "updateArticle",
+        "operationId": "updateArticle_1",
         "parameters": [
           {
             "name": "idCommande",
@@ -1030,7 +1179,7 @@
         ],
         "summary": "Mettre à jour l'article d'une ligne de commande",
         "description": "Modifie l'article d'une ligne de commande existante",
-        "operationId": "updateArticle_1",
+        "operationId": "updateArticle_2",
         "parameters": [
           {
             "name": "idCommande",
@@ -2541,6 +2690,88 @@
   },
   "components": {
     "schemas": {
+      "AdresseDto": {
+        "type": "object",
+        "properties": {
+          "adresse1": {
+            "type": "string"
+          },
+          "adresse2": {
+            "type": "string"
+          },
+          "ville": {
+            "type": "string"
+          },
+          "codePostale": {
+            "type": "string"
+          },
+          "pays": {
+            "type": "string"
+          }
+        }
+      },
+      "FournisseurDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "nom": {
+            "type": "string"
+          },
+          "prenom": {
+            "type": "string"
+          },
+          "adresse": {
+            "$ref": "#/components/schemas/AdresseDto"
+          },
+          "photo": {
+            "type": "string"
+          },
+          "mail": {
+            "type": "string"
+          },
+          "numTel": {
+            "type": "string"
+          },
+          "idEntreprise": {
+            "type": "integer",
+            "format": "int32"
+          }
+        }
+      },
+      "ClientDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "nom": {
+            "type": "string"
+          },
+          "prenom": {
+            "type": "string"
+          },
+          "adresse": {
+            "$ref": "#/components/schemas/AdresseDto"
+          },
+          "photo": {
+            "type": "string"
+          },
+          "mail": {
+            "type": "string"
+          },
+          "numTel": {
+            "type": "string"
+          },
+          "idEntreprise": {
+            "type": "integer",
+            "format": "int32"
+          }
+        }
+      },
       "ArticleDto": {
         "type": "object",
         "properties": {
@@ -2663,26 +2894,6 @@
           }
         }
       },
-      "AdresseDto": {
-        "type": "object",
-        "properties": {
-          "adresse1": {
-            "type": "string"
-          },
-          "adresse2": {
-            "type": "string"
-          },
-          "ville": {
-            "type": "string"
-          },
-          "codePostale": {
-            "type": "string"
-          },
-          "pays": {
-            "type": "string"
-          }
-        }
-      },
       "EntrepriseDto": {
         "type": "object",
         "properties": {
@@ -2801,37 +3012,6 @@
               "COMMANDE_FOURNISSEUR",
               "VENTE"
             ]
-          },
-          "idEntreprise": {
-            "type": "integer",
-            "format": "int32"
-          }
-        }
-      },
-      "FournisseurDto": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "nom": {
-            "type": "string"
-          },
-          "prenom": {
-            "type": "string"
-          },
-          "adresse": {
-            "$ref": "#/components/schemas/AdresseDto"
-          },
-          "photo": {
-            "type": "string"
-          },
-          "mail": {
-            "type": "string"
-          },
-          "numTel": {
-            "type": "string"
           },
           "idEntreprise": {
             "type": "integer",
@@ -3387,37 +3567,6 @@
           }
         }
       },
-      "ClientDto": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "nom": {
-            "type": "string"
-          },
-          "prenom": {
-            "type": "string"
-          },
-          "adresse": {
-            "$ref": "#/components/schemas/AdresseDto"
-          },
-          "photo": {
-            "type": "string"
-          },
-          "mail": {
-            "type": "string"
-          },
-          "numTel": {
-            "type": "string"
-          },
-          "idEntreprise": {
-            "type": "integer",
-            "format": "int32"
-          }
-        }
-      },
       "CommandeClientDto": {
         "type": "object",
         "properties": {
@@ -3465,8 +3614,9 @@
             "type": "integer",
             "format": "int32"
           },
-          "article": {
-            "$ref": "#/components/schemas/ArticleDto"
+          "idArticle": {
+            "type": "integer",
+            "format": "int32"
           },
           "quantite": {
             "type": "number"
